--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Technical Documentation Page</title>
   </head>
-  <body></body>
+  <body>
+    <main id="main-doc"></main>
+  </body>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
