--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <title>Technical Documentation Page</title>
   </head>
   <body>
-    <main id="main-doc"></main>
+    <main id="main-doc">
+      <section class="main-section"></section>
+      <section class="main-section"></section>
+      <section class="main-section"></section>
+      <section class="main-section"></section>
+      <section class="main-section"></section>
+    </main>
   </body>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
