--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
   </head>
   <body>
     <main id="main-doc">
-      <section class="main-section"></section>
-      <section class="main-section"></section>
-      <section class="main-section"></section>
-      <section class="main-section"></section>
-      <section class="main-section"></section>
+      <section class="main-section"><header>Introduction</header></section>
+      <section class="main-section">
+        <header>What you should already know</header>
+      </section>
+      <section class="main-section">
+        <header>JavaScript and Java</header>
+      </section>
+      <section class="main-section"><header>Hello world</header></section>
+      <section class="main-section"><header>Variables</header></section>
     </main>
   </body>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
