User Story #8 finished. Added a navbar to the page.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Technical Documentation Page</title>
   </head>
   <body>
+    <nav id="navbar"></nav>
     <main id="main-doc">
       <section class="main-section" id="Introduction">
         <header>Introduction</header>
