--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Technical Documentation Page</title>
   </head>
   <body>
-    <nav id="navbar"></nav>
+    <nav id="navbar"><header>JS Documentation</header></nav>
     <main id="main-doc">
       <section class="main-section" id="Introduction">
         <header>Introduction</header>
