Fixed page's styles. Project finished.

--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
         <li><a class="nav-link" href="#Constants">Constants</a></li>
         <li><a class="nav-link" href="#Data_types">Data types</a></li>
         <li>
-          <a class="nav-link" href="#if...else_statement"
-            >if...else statement</a
-          >
+          <a class="nav-link" href="#if_else_statement">if...else statement</a>
         </li>
         <li><a class="nav-link" href="#while_statement">while statement</a></li>
         <li>
@@ -302,7 +300,7 @@
           procedures that your application can perform.
         </article>
       </section>
-      <section class="main-section" id="if...else_statement">
+      <section class="main-section" id="if_else_statement">
         <header>if...else statement</header>
         <article>
           Use the if statement to execute a statement if a logical condition is
